- Improvements to text mode browser:
  - Very long (more than 1024 characters) message lines are now properly
    handled.
- Bump package version to 3.
  - Required by changes to the hashing algorithm.
  - Required to save Message ID compression codebook.
  - Old archives are now refused to be opened by libuat. Package utility still
    can handle them.
- Check if all messages can be accessed using their Message IDs in verify
  utility.
- Check for empty 'Subject:' field in extract-msgmeta utility.
- Extraction of parent message from 'References:' field is now more relaxed.
- Improvements to time stamp handling:
  - While 'Received:' field exists primarily in mailing list messages, usenet
    messages use 'NNTP-Received-Date:' or 'Injection-Data:' headers. These are
    now also handled.
  - Validate date against all server date headers, not only the first one.
- Multi-threaded compression in repack-lz4 utility.
- Improved memory efficiency of small temporary allocations in various
  utilities.
- Improvements in threadify utility:
  - Multi-threaded message matching.
  - Lexicon data is now properly transformed after the messages are matched.
    Lexicon utility no longer needs to be run twice.
- Change search in headers to search in 'From:' or 'Subject:' fields.


v0.4 (2017-07-19)
-----------------

- Qt browser is now marked as deprecated.
- Use command line interface in query utility.
- Allow scanning for the last message index on usenet servers (Xref field).
- Add update-zstd utility.
- Add nntp-get utility.
- Further speed improvements in lexdist utility.
- Store levenshtein distance in lexdist data. Use this information to modify
  search score.
- Search for indirect links between messages in galaxy mode. An indirect link
  is a reply sent to group A to a message sent to group B. This is not a
  crosspost, but messages obviously should be cross-referenced.
- Text mode browser improvements: